[package]
name = "maelstrom-project"
version = "0.1.0"
authors = ["Paul Caporn <paul.caporn@bbc.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="echo"
path="src/echo.rs"

[[bin]]
name="broadcast"
path="src/broadcast.rs"

[[bin]]
name="gset"
path="src/gset.rs"

[[bin]]
name="gcounter"
path="src/gcounter.rs"

[[bin]]
name="datomic"
path="src/datomic.rs"

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
json-patch = "0.2.6"
rand = "0.8.0"
